<resources>
    <string name="no_archived_results_yet">There are no results yet</string>
    <string name="average">Average</string>
    <string name="best">Best</string>
    <string name="no_results_for_period_and_network">There are no results</string>
    <string name="running">Running</string>
    <string name="no_connectivity">Check out your connectivity</string>
    <string name="slow_connectivity">Slow connectivity</string>
    <string name="latency_loss_jitter">Latency / Loss / Jitter</string>
    <string name="ok">OK</string>
    <string name="about_title">About</string>
    <string name="about_description_download">This should be indicative of the maximum speed your broadband connection will be able to download data from the Internet.  Results are recorded in Mbps (higher is better).</string>
    <string name="about_description_upload">This should be indicative of the maximum speed your broadband connection will be able to transmit data to the Internet.  Results are recorded in Mbps (higher is better).</string>
    <string name="about_description_latency">This test measures how long it takes one packet to be sent to one of our test servers, and then returned back to you.  Latency can be thought of as the responsiveness of the connection from your device and our servers on the Internet. Times are recorded here in milliseconds (lower is better).</string>
    <string name="about_description_packet_loss">Packet loss occurs when the information sent by your device fails to reach its destination. When packet loss is high, you may find that time sensitive applications such as Voice over IP (VoIP) and online gaming will suffer. Packet loss is recorded here as a percentage (lower is better).</string>
    <string name="about_description_jitter">This test measures the variation in the time it takes one packet to be sent to one of our test servers and then returned back to you. In other words, jitter represents the variation of latency. Jitter is usually an indication of network congestion and high levels of jitter would impact the performance of time sensitive applications such as VoIP, online gaming and video streaming. Jitter is recorded in milliseconds (lower is better).</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="latency">Latency</string>
    <string name="packet_loss">Packet loss</string>
    <string name="loss">Loss</string>
    <string name="jitter">Jitter</string>
    <string name="slash">-</string>
    <string name="dummytext">dummy</string>
    <string name="nineninenine">999.99</string>
    <string name="dummydate">19/12/14 12:35</string>
    <string name="dummydateday">19/12/14</string>
    <string name="dummydatetime">12:35:59</string>
    <string name="sharedPreferencesIdentifier">SamknowsSKSpeedTest</string>
    <string name="network_type_wifi">WiFi</string>
    <string name="network_type_mobile">Mobile</string>
    <string name="network_type_all">All</string>
    <string name="network_type_noconnection">No Network</string>
    <string name="network_type_NETWORK_TYPE_1xRTT">"CDMA2000"</string>
    <string name="network_type_NETWORK_TYPE_CDMA">"CDMA"</string>
    <string name="network_type_NETWORK_TYPE_EDGE">"EDGE"</string>
    <string name="network_type_NETWORK_TYPE_EVDO_0">"EV-DO 0"</string>
    <string name="network_type_NETWORK_TYPE_EVDO_A">"EV-DO A"</string>
    <string name="network_type_NETWORK_TYPE_GPRS">"GPRS"</string>
    <string name="network_type_NETWORK_TYPE_HSDPA">"HSDPA"</string>
    <string name="network_type_NETWORK_TYPE_HSPA">"HSPA"</string>
    <string name="network_type_NETWORK_TYPE_HSUPA">"HSUPA"</string>
    <string name="network_type_NETWORK_TYPE_UMTS">"UMTS"</string>
    <string name="network_type_NETWORK_TYPE_EHRPD">"eHRPD"</string>
    <string name="network_type_NETWORK_TYPE_EVDO_B">"EV-DO B"</string>
    <string name="network_type_NETWORK_TYPE_HSPAP">"HSPA+"</string>
    <string name="network_type_NETWORK_TYPE_IDEN">"iDEN"</string>
    <string name="network_type_NETWORK_TYPE_LTE">"LTE"</string>
    <string name="network_type_TYPE_WIMAX">"WiMax"</string>
    <string name="network_type_TYPE_BLUETOOTH">"Bluetooth"</string>
    <string name="network_type_TYPE_ETHERNET">"Ethernet"</string>
    <string name="network_type_TYPE_DUMMY">"Dummy"</string>
    <string name="network_type_TYPE_MOBILE_DUN">"Mobile DUN"</string>
    <string name="network_type_TYPE_MOBILE_HIPRI">"Mobile HIPRI"</string>
    <string name="network_type_TYPE_MOBILE_MMS">"Mobile MMS"</string>
    <string name="network_type_TYPE_MOBILE_SUPL">"Mobile SUPL"</string>
    <string name="time_period">Period</string>
    <string name="time_period_1_day">1 Day</string>
    <string name="time_period_1_week">1 Week</string>
    <string name="time_period_1_month">1 Month</string>
    <string name="time_period_3_months">3 Months</string>
    <string name="time_period_1_year">1 Year</string>
    <string name="share_image_using">Share image using...</string>
    <string name="share_caption_mobile">Mobile</string>
    <string name="share_caption_wifi">WiFi</string>
    <string name="network_performance_test">Network performance test</string>
    <string name="download_speed">Download Speed</string>
    <string name="upload_speed">Upload Speed</string>
    <string name="latency_lowercase">Netwwork Latency</string>
    <string name="packet_loss_lowercase">Packet Loss</string>
    <string name="jitter_lowercase">Jitter</string>
    <string name="not_available">NA</string>
    <string name="failed_test">Failed</string>
    <string name="failed_test_short">F</string>
    <string name="description_icon_clock">An image representing a clock</string>
    <string name="description_wifi_icon">An icon representing a wifi signal</string>
    <string name="description_icon_chart">Icon representing a chart</string>
    <string name="description_image_connectivity_type">Image representing the connectivity type</string>
    <string name="description_icon_download">This icon represents the download result</string>
    <string name="description_icon_upload">This icon represents the upload result</string>
    <string name="description_image_eaq_logo">Image with the SamKnows logo</string>
    <string name="units_Mbps">Mbps</string>
    <string name="units_ms">ms</string>
    <string name="units_s">s</string>
    <string name="units_percent">%</string>
    <string name="sim_and_network_operators">Sim and Network Operators</string>
    <string name="sim_operator">Sim Operator</string>
    <string name="sim_operator_code">Sim Operator Code</string>
    <string name="network_operator">Network Operator</string>
    <string name="network_operator_code">Network Operator Code</string>
    <string name="roaming_status">Roaming Status</string>
    <string name="cell_tower_id">Cell Tower ID</string>
    <string name="cell_tower_area_location_code">Cell Tower Area Location Code</string>
    <string name="signal">Signal</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="bearer">Bearer</string>
    <string name="device">Device</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="os">OS</string>
    <string name="os_version">OS version</string>
    <string name="phone_type">Phone Type</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="location_provider">Location Provider</string>
    <string name="tools_text_value_date">"4/4/2014"</string>
    <string name="tools_text_value_average_download">"3"</string>
    <string name="tools_text_value_average_upload">"1"</string>
    <string name="tools_text_value_average_latency">"3"</string>
    <string name="tools_text_value_average_packet_loss">"3"</string>
    <string name="tools_text_value_average_jitter">"2"</string>
    <string name="tools_text_value_best_download">"4"</string>
    <string name="tools_text_value_best_upload">"2"</string>
    <string name="tools_text_value_best_latency">"1"</string>
    <string name="tools_text_value_best_packet_loss">"1"</string>
    <string name="tools_text_value_best_jitter">"1"</string>
    <string name="tools_text_value_sim_operator_code">"23410"</string>
    <string name="tools_text_value_network_operator_code">"23410"</string>
    <string name="tools_text_value_roaming_status">"off"</string>
    <string name="tools_text_value_cell_tower_id">1260999</string>
    <string name="tools_text_value_sim_operator">giffgaff</string>
    <string name="tools_text_value_network_operator">giffgaff</string>
    <string name="tools_text_value_cell_tower_area_location_code">22019</string>
    <string name="tools_text_value_signal_strength">-89dB</string>
    <string name="tools_text_value_bearer">HSPA+</string>
    <string name="tools_text_value_manufacturer">LG</string>
    <string name="tools_text_value_model">Nexus 5</string>
    <string name="tools_text_value_os">Android</string>
    <string name="tools_text_value_os_version">19</string>
    <string name="tools_text_value_phone_type">GSM</string>
    <string name="tools_text_value_latitude">51.41995</string>
    <string name="tools_text_value_longitude">-0.17638</string>
    <string name="tools_text_value_accuracy">13.0 m</string>
    <string name="tools_text_value_location_provider">GPS</string>
    <string name="tools_text_value_network_type">"Mobile Network"</string>
    <string name="data_cap_warning_already_exceeded">Data cap exceeded</string>
    <string name="data_cap_warning_might_be_exceeded">Data cap might be exceeded</string>
    <string name="gauge_message_start">Start</string>
    <string name="gauge_message_starting"></string>
    <string name="advice_message_press_the_button">Press the Start button</string>
    <string name="advice_message_press_the_button_run_again">Press the Start button to run again</string>
    <string name="advice_message_running">Running Tests</string>
    <string name="advice_message_stopping">Stopping…</string>
    <string name="label_message_ready_to_run">Ready to run</string>
    <string name="label_message_tests_executed">Tests executed</string>
    <string name="label_message_starting_tests">Target Selection</string>
    <string name="label_message_download_test">Download testing</string>
    <string name="label_message_upload_test">Upload testing</string>
    <string name="label_message_latency_loss_jitter_test">Latency / Loss / Jitter</string>
    <string name="no_internet_connection ">There is no internet connection</string>
    <string name="tests_running_title">Tests Running</string>
    <string name="tests_running_message">You are recommended to wait until the tests complete. Do you really want to stop the tests?</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_select_network">Select Network</string>
    <string name="menu_item_select_tests">Select Tests</string>
    <string name="menu_item_share">Share</string>
    <string name="title_test">Test</string>
    <string name="title_history">Results</string>
    <string name="title_summary">Summary</string>
    <string name="pm_your_ip_label">Your IP</string>
    <string name="pm_your_ip_example">89.105.103.193</string>
    <string name="pm_reference_no_label">Reference No.</string>
    <string name="pm_reference_no_example">00e2145198fc49e1fd5587d0b57db66</string>
    <string name="Initial_Warning_Text"></string>
</resources>