<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_activity_select_time_period_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_margin_double"
    android:layout_marginTop="@dimen/activity_margin_double"
    android:background="@drawable/background_gradient_nonmain_with_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_select_time_period_1_day"
            android:layout_width="@dimen/visual_rhythm_quad"
            android:layout_height="@dimen/visual_rhythm"
            android:layout_margin="@dimen/spacing_micro"
            android:background="@drawable/dialog_buttons"
            android:text="@string/time_period_1_day"
            android:textColor="@color/button_dialog_text_state_list_color"
            android:textSize="@dimen/text_size_small"/>

        <Button
            android:id="@+id/button_select_time_period_1_week"
            android:layout_width="@dimen/visual_rhythm_quad"
            android:layout_height="@dimen/visual_rhythm"
            android:layout_margin="@dimen/spacing_micro"
            android:background="@drawable/dialog_buttons"
            android:text="@string/time_period_1_week"
            android:textColor="@color/button_dialog_text_state_list_color"
            android:textSize="@dimen/text_size_small"/>

        <Button
            android:id="@+id/button_select_time_period_1_month"
            android:layout_width="@dimen/visual_rhythm_quad"
            android:layout_height="@dimen/visual_rhythm"
            android:layout_margin="@dimen/spacing_micro"
            android:background="@drawable/dialog_buttons"
            android:text="@string/time_period_1_month"
            android:textColor="@color/button_dialog_text_state_list_color"
            android:textSize="@dimen/text_size_small"/>

        <Button
            android:id="@+id/button_select_time_period_3_months"
            android:layout_width="@dimen/visual_rhythm_quad"
            android:layout_height="@dimen/visual_rhythm"
            android:layout_margin="@dimen/spacing_micro"
            android:background="@drawable/dialog_buttons"
            android:text="@string/time_period_3_months"
            android:textColor="@color/button_dialog_text_state_list_color"
            android:textSize="@dimen/text_size_small"/>

        <Button
            android:id="@+id/button_select_time_period_1_year"
            android:layout_width="@dimen/visual_rhythm_quad"
            android:layout_height="@dimen/visual_rhythm"
            android:layout_margin="@dimen/spacing_micro"
            android:background="@drawable/dialog_buttons"
            android:text="@string/time_period_1_year"
            android:textColor="@color/button_dialog_text_state_list_color"
            android:textSize="@dimen/text_size_small"/>

    </LinearLayout>

</RelativeLayout>